bk_ida/gccida/g3/compute_transp
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4220:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4220:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4234:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v32; // rdx 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4234:12: error: use of undeclared identifier 'v32'
reg_set_0 *v32; // rdx 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4236:4: error: expected ';' after expression
rtx insn; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4236:5: error: use of undeclared identifier 'insn'
rtx insn; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4238:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v36; // rdx 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4238:12: error: use of undeclared identifier 'v36'
reg_set_0 *v36; // rdx 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4240:4: error: expected ';' after expression
rtx v38; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4240:5: error: use of undeclared identifier 'v38'
rtx v38; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4279:1: error: use of undeclared identifier 'v32'
v32 = reg_set_table[rtuint]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4280:6: error: use of undeclared identifier 'v32'
if ( v32 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4285:1: error: use of undeclared identifier 'insn'
insn = v32->insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4285:8: error: use of undeclared identifier 'v32'
insn = v32->insn; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4286:1: error: use of undeclared identifier 'v32'
v32 = v32->next; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4286:7: error: use of undeclared identifier 'v32'
v32 = v32->next; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4287:35: error: use of undeclared identifier 'insn'
v35 = bmap[*( int *)( v33->data.l[insn->fld[0].rtint] + 88)]; 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4290:9: error: use of undeclared identifier 'v32'
while ( v32 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/gcse.c:4310:1: error: use of undeclared identifier 'v36'
v36 = reg_set_table[rtuint]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/compute_transp/src/obj/gcse.o] Error 1
